Fixes unreadable text on mobile devices
Changes opacity level to 1 to fix viewing issues.

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -295,6 +295,14 @@ footer {
     width: 100%;
   }
 
+  h2.UAtext {
+    opacity: 1;
+  }
+
+  p.defText {
+    opacity: 1;
+  }
+
   .center {
     width: 100%;
   }
@@ -325,6 +333,14 @@ footer {
 
   li {
     width: 100%;
+  }
+
+  h2.UAtext {
+    opacity: 1;
+  }
+
+  p.defText {
+    opacity: 1;
   }
 
   .center {
@@ -361,6 +377,14 @@ footer {
 
   li {
     width: 100%;
+  }
+
+  h2.UAtext {
+    opacity: 1;
+  }
+
+  p.defText {
+    opacity: 1;
   }
 
   .center {
